log
Wed 19 Apr 2023 02:35:53 AM UTC: 
 tests:  0|6
total_score: 0/70
ff744e4
Fri 30 Jun 2023 10:48:52 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
b585097
Fri 30 Jun 2023 10:49:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
5d7d28e
Fri 30 Jun 2023 10:51:50 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0c34a36
Fri 30 Jun 2023 10:52:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5382daa
Fri 30 Jun 2023 10:52:43 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
839353d
Fri 30 Jun 2023 10:54:36 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
6a715cc
Fri 30 Jun 2023 10:55:00 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
52ea25f
Fri 30 Jun 2023 10:57:48 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:23: error: expected expression before ‘{’ token
   58 |   mapaHash->buckets = {NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL};
      |                       ^
Compilation failed
59cc04c
Fri 30 Jun 2023 10:58:58 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
caac9c6
